Introduce unit test set-up

--- a/requirements.txt
+++ b/requirements.txt
@@ -2,11 +2,23 @@ autopep8==1.4.4
 certifi==2019.9.11
 chardet==3.0.4
 entrypoints==0.3
+filelock==3.0.12
 flake8==3.7.9
 idna==2.8
+importlib-metadata==0.23
 mccabe==0.6.1
+more-itertools==7.2.0
+packaging==19.2
+pluggy==0.13.0
+py==1.8.0
 pycodestyle==2.5.0
 pyflakes==2.1.1
+pyparsing==2.4.5
 python-dotenv==0.10.3
 requests==2.22.0
+six==1.13.0
+toml==0.10.0
+tox==3.14.1
 urllib3==1.25.7
+virtualenv==16.7.7
+zipp==0.6.0
