--- a/tox.ini
+++ b/tox.ini
@@ -4,10 +4,11 @@
 # and then run "tox" from this directory.
 
 [tox]
-envlist = py36
+envlist = py33, py34, py35, py36, py37
 
 [testenv]
-deps = nose
+deps =
+    nose
 
 commands =
     nosetests tests
