Add 'test_request_post_success' case
Co-authored-by: Bartosz Świątek <shadzik@gmail.com>

--- a/tox.ini
+++ b/tox.ini
@@ -8,7 +8,7 @@ envlist = py33, py34, py35, py36, py37
 
 [testenv]
 deps =
-    nose
+    -r{toxinidir}/tests/requirements.txt
 
 commands =
     nosetests tests
