--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,9 @@ flake8==3.7.9
 idna==2.8
 importlib-metadata==0.23
 mccabe==0.6.1
+mock==3.0.5
 more-itertools==7.2.0
+nose==1.3.7
 packaging==19.2
 pluggy==0.13.0
 py==1.8.0
@@ -16,6 +18,7 @@ pyflakes==2.1.1
 pyparsing==2.4.5
 python-dotenv==0.10.3
 requests==2.22.0
+requests-mock==1.7.0
 six==1.13.0
 toml==0.10.0
 tox==3.14.1
