--- a/.github/workflows/pythonci.yml
+++ b/.github/workflows/pythonci.yml
@@ -15,6 +15,8 @@ jobs:
         python-version: 3.8
     - name: Install dependencies
       run: |
+        python -m virtualenv --clear venv
+        . venv/bin/activate
         python -m pip install --upgrade pip
         pip install -r tests/requirements.txt
     - name: Lint with flake8
